--- a/Kaggle Practice/7_Digit_Recognizer/Digit_Recognizer.ipynb
+++ b/Kaggle Practice/7_Digit_Recognizer/Digit_Recognizer.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "[5 rows x 785 columns]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
        "((42000, 784), (42000,))"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
        "[42000 rows x 10 columns]"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
        "((37800, 28, 28, 1), (4200, 28, 28, 1))"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
        "((37800, 10), (4200, 10))"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,36 +730,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_2\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_6 (Conv2D)           (None, 26, 26, 32)        320       \n",
+      " conv2d (Conv2D)             (None, 26, 26, 32)        320       \n",
       "                                                                 \n",
-      " max_pooling2d_4 (MaxPooling  (None, 13, 13, 32)       0         \n",
+      " max_pooling2d (MaxPooling2D  (None, 13, 13, 32)       0         \n",
+      " )                                                               \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (None, 11, 11, 32)        9248      \n",
+      "                                                                 \n",
+      " max_pooling2d_1 (MaxPooling  (None, 5, 5, 32)         0         \n",
       " 2D)                                                             \n",
       "                                                                 \n",
-      " conv2d_7 (Conv2D)           (None, 11, 11, 32)        9248      \n",
+      " conv2d_2 (Conv2D)           (None, 3, 3, 64)          18496     \n",
       "                                                                 \n",
-      " max_pooling2d_5 (MaxPooling  (None, 5, 5, 32)         0         \n",
-      " 2D)                                                             \n",
+      " flatten (Flatten)           (None, 576)               0         \n",
       "                                                                 \n",
-      " conv2d_8 (Conv2D)           (None, 3, 3, 64)          18496     \n",
+      " dense (Dense)               (None, 128)               73856     \n",
       "                                                                 \n",
-      " flatten_2 (Flatten)         (None, 576)               0         \n",
+      " dropout (Dropout)           (None, 128)               0         \n",
       "                                                                 \n",
-      " dense_4 (Dense)             (None, 128)               73856     \n",
-      "                                                                 \n",
-      " dropout_2 (Dropout)         (None, 128)               0         \n",
-      "                                                                 \n",
-      " dense_5 (Dense)             (None, 10)                1290      \n",
+      " dense_1 (Dense)             (None, 10)                1290      \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 103,210\n",
@@ -783,42 +783,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "1182/1182 [==============================] - 8s 6ms/step - loss: 0.4767 - accuracy: 0.8827 - val_loss: 0.0963 - val_accuracy: 0.9750\n",
-      "Epoch 2/10\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.1203 - accuracy: 0.9661 - val_loss: 0.0695 - val_accuracy: 0.9795\n",
-      "Epoch 3/10\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0910 - accuracy: 0.9732 - val_loss: 0.0614 - val_accuracy: 0.9817\n",
-      "Epoch 4/10\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0747 - accuracy: 0.9789 - val_loss: 0.0570 - val_accuracy: 0.9840\n",
-      "Epoch 5/10\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0667 - accuracy: 0.9802 - val_loss: 0.0421 - val_accuracy: 0.9867\n",
-      "Epoch 6/10\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0604 - accuracy: 0.9829 - val_loss: 0.0492 - val_accuracy: 0.9855\n",
-      "Epoch 7/10\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0531 - accuracy: 0.9856 - val_loss: 0.0630 - val_accuracy: 0.9831\n",
-      "Epoch 8/10\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0479 - accuracy: 0.9862 - val_loss: 0.0432 - val_accuracy: 0.9888\n",
-      "Epoch 9/10\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0490 - accuracy: 0.9866 - val_loss: 0.0661 - val_accuracy: 0.9845\n",
-      "Epoch 10/10\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0449 - accuracy: 0.9873 - val_loss: 0.0636 - val_accuracy: 0.9860\n"
+      "Epoch 1/25\n",
+      "1182/1182 [==============================] - 13s 6ms/step - loss: 0.4771 - accuracy: 0.8838 - val_loss: 0.0943 - val_accuracy: 0.9710\n",
+      "Epoch 2/25\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.1226 - accuracy: 0.9641 - val_loss: 0.0718 - val_accuracy: 0.9788\n",
+      "Epoch 3/25\n",
+      "1182/1182 [==============================] - 6s 5ms/step - loss: 0.0877 - accuracy: 0.9741 - val_loss: 0.0709 - val_accuracy: 0.9798\n",
+      "Epoch 4/25\n",
+      "1182/1182 [==============================] - 6s 5ms/step - loss: 0.0756 - accuracy: 0.9782 - val_loss: 0.0633 - val_accuracy: 0.9810\n",
+      "Epoch 5/25\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0681 - accuracy: 0.9801 - val_loss: 0.0462 - val_accuracy: 0.9874\n",
+      "Epoch 6/25\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0623 - accuracy: 0.9824 - val_loss: 0.0547 - val_accuracy: 0.9848\n",
+      "Epoch 7/25\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0544 - accuracy: 0.9841 - val_loss: 0.0454 - val_accuracy: 0.9879\n",
+      "Epoch 8/25\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0487 - accuracy: 0.9865 - val_loss: 0.0412 - val_accuracy: 0.9900\n",
+      "Epoch 9/25\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0435 - accuracy: 0.9872 - val_loss: 0.0701 - val_accuracy: 0.9829\n",
+      "Epoch 10/25\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0434 - accuracy: 0.9874 - val_loss: 0.0524 - val_accuracy: 0.9871\n",
+      "Epoch 11/25\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0378 - accuracy: 0.9895 - val_loss: 0.0836 - val_accuracy: 0.9840\n",
+      "Epoch 12/25\n",
+      "1182/1182 [==============================] - 8s 7ms/step - loss: 0.0438 - accuracy: 0.9885 - val_loss: 0.0694 - val_accuracy: 0.9848\n",
+      "Epoch 13/25\n",
+      "1182/1182 [==============================] - 8s 6ms/step - loss: 0.0290 - accuracy: 0.9918 - val_loss: 0.0754 - val_accuracy: 0.9855\n",
+      "Epoch 14/25\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0358 - accuracy: 0.9900 - val_loss: 0.0955 - val_accuracy: 0.9814\n",
+      "Epoch 15/25\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0324 - accuracy: 0.9911 - val_loss: 0.0817 - val_accuracy: 0.9860\n",
+      "Epoch 16/25\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0387 - accuracy: 0.9905 - val_loss: 0.0582 - val_accuracy: 0.9862\n",
+      "Epoch 17/25\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0309 - accuracy: 0.9917 - val_loss: 0.0688 - val_accuracy: 0.9862\n",
+      "Epoch 18/25\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0302 - accuracy: 0.9922 - val_loss: 0.0728 - val_accuracy: 0.9893\n",
+      "Epoch 19/25\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0363 - accuracy: 0.9906 - val_loss: 0.0836 - val_accuracy: 0.9867\n",
+      "Epoch 20/25\n",
+      "1182/1182 [==============================] - 6s 5ms/step - loss: 0.0292 - accuracy: 0.9930 - val_loss: 0.0844 - val_accuracy: 0.9874\n",
+      "Epoch 21/25\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0300 - accuracy: 0.9924 - val_loss: 0.0869 - val_accuracy: 0.9867\n",
+      "Epoch 22/25\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0336 - accuracy: 0.9920 - val_loss: 0.0964 - val_accuracy: 0.9850\n",
+      "Epoch 23/25\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0235 - accuracy: 0.9935 - val_loss: 0.1106 - val_accuracy: 0.9831\n",
+      "Epoch 24/25\n",
+      "1182/1182 [==============================] - 6s 5ms/step - loss: 0.0382 - accuracy: 0.9915 - val_loss: 0.1010 - val_accuracy: 0.9838\n",
+      "Epoch 25/25\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0245 - accuracy: 0.9936 - val_loss: 0.1061 - val_accuracy: 0.9833\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x258acf01900>"
+       "<keras.callbacks.History at 0x11c58b5b910>"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,19 +856,27 @@
    "source": [
     "model.fit(X_train, y_train,\n",
     "          validation_data=(X_val, y_val),\n",
-    "          epochs=10)"
+    "          epochs=25)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4) Evaluating the CNN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "132/132 [==============================] - 0s 3ms/step - loss: 0.0636 - accuracy: 0.9860\n"
+      "132/132 [==============================] - 0s 3ms/step - loss: 0.1061 - accuracy: 0.9833\n"
      ]
     }
    ],
@@ -848,19 +886,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy: 98.60%\n"
+      "accuracy: 98.333335%\n"
      ]
     }
    ],
    "source": [
-    "print(\"%s: %.2f%%\" % (model.metrics_names[1], scores[1]*100))"
+    "print(\"%s: %.6f%%\" % (model.metrics_names[1], scores[1]*100))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4) Making Predictions on Test"
    ]
   },
   {
