--- a/Kaggle Practice/7_Digit_Recognizer/Digit_Recognizer.ipynb
+++ b/Kaggle Practice/7_Digit_Recognizer/Digit_Recognizer.ipynb
@@ -791,66 +791,14 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/25\n",
-      "1182/1182 [==============================] - 13s 6ms/step - loss: 0.4771 - accuracy: 0.8838 - val_loss: 0.0943 - val_accuracy: 0.9710\n",
+      "1182/1182 [==============================] - 17s 6ms/step - loss: 0.4778 - accuracy: 0.8922 - val_loss: 0.0998 - val_accuracy: 0.9693\n",
       "Epoch 2/25\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.1226 - accuracy: 0.9641 - val_loss: 0.0718 - val_accuracy: 0.9788\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.1189 - accuracy: 0.9672 - val_loss: 0.0574 - val_accuracy: 0.9829\n",
       "Epoch 3/25\n",
-      "1182/1182 [==============================] - 6s 5ms/step - loss: 0.0877 - accuracy: 0.9741 - val_loss: 0.0709 - val_accuracy: 0.9798\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0888 - accuracy: 0.9747 - val_loss: 0.0697 - val_accuracy: 0.9767\n",
       "Epoch 4/25\n",
-      "1182/1182 [==============================] - 6s 5ms/step - loss: 0.0756 - accuracy: 0.9782 - val_loss: 0.0633 - val_accuracy: 0.9810\n",
-      "Epoch 5/25\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0681 - accuracy: 0.9801 - val_loss: 0.0462 - val_accuracy: 0.9874\n",
-      "Epoch 6/25\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0623 - accuracy: 0.9824 - val_loss: 0.0547 - val_accuracy: 0.9848\n",
-      "Epoch 7/25\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0544 - accuracy: 0.9841 - val_loss: 0.0454 - val_accuracy: 0.9879\n",
-      "Epoch 8/25\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0487 - accuracy: 0.9865 - val_loss: 0.0412 - val_accuracy: 0.9900\n",
-      "Epoch 9/25\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0435 - accuracy: 0.9872 - val_loss: 0.0701 - val_accuracy: 0.9829\n",
-      "Epoch 10/25\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0434 - accuracy: 0.9874 - val_loss: 0.0524 - val_accuracy: 0.9871\n",
-      "Epoch 11/25\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0378 - accuracy: 0.9895 - val_loss: 0.0836 - val_accuracy: 0.9840\n",
-      "Epoch 12/25\n",
-      "1182/1182 [==============================] - 8s 7ms/step - loss: 0.0438 - accuracy: 0.9885 - val_loss: 0.0694 - val_accuracy: 0.9848\n",
-      "Epoch 13/25\n",
-      "1182/1182 [==============================] - 8s 6ms/step - loss: 0.0290 - accuracy: 0.9918 - val_loss: 0.0754 - val_accuracy: 0.9855\n",
-      "Epoch 14/25\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0358 - accuracy: 0.9900 - val_loss: 0.0955 - val_accuracy: 0.9814\n",
-      "Epoch 15/25\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0324 - accuracy: 0.9911 - val_loss: 0.0817 - val_accuracy: 0.9860\n",
-      "Epoch 16/25\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0387 - accuracy: 0.9905 - val_loss: 0.0582 - val_accuracy: 0.9862\n",
-      "Epoch 17/25\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0309 - accuracy: 0.9917 - val_loss: 0.0688 - val_accuracy: 0.9862\n",
-      "Epoch 18/25\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0302 - accuracy: 0.9922 - val_loss: 0.0728 - val_accuracy: 0.9893\n",
-      "Epoch 19/25\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0363 - accuracy: 0.9906 - val_loss: 0.0836 - val_accuracy: 0.9867\n",
-      "Epoch 20/25\n",
-      "1182/1182 [==============================] - 6s 5ms/step - loss: 0.0292 - accuracy: 0.9930 - val_loss: 0.0844 - val_accuracy: 0.9874\n",
-      "Epoch 21/25\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0300 - accuracy: 0.9924 - val_loss: 0.0869 - val_accuracy: 0.9867\n",
-      "Epoch 22/25\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0336 - accuracy: 0.9920 - val_loss: 0.0964 - val_accuracy: 0.9850\n",
-      "Epoch 23/25\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0235 - accuracy: 0.9935 - val_loss: 0.1106 - val_accuracy: 0.9831\n",
-      "Epoch 24/25\n",
-      "1182/1182 [==============================] - 6s 5ms/step - loss: 0.0382 - accuracy: 0.9915 - val_loss: 0.1010 - val_accuracy: 0.9838\n",
-      "Epoch 25/25\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0245 - accuracy: 0.9936 - val_loss: 0.1061 - val_accuracy: 0.9833\n"
+      " 791/1182 [===================>..........] - ETA: 2s - loss: 0.0738 - accuracy: 0.9779"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x11c58b5b910>"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -869,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
