--- a/Kaggle Practice/7_Digit_Recognizer/Digit_Recognizer.ipynb
+++ b/Kaggle Practice/7_Digit_Recognizer/Digit_Recognizer.ipynb
@@ -790,21 +790,123 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/25\n",
-      "1182/1182 [==============================] - 17s 6ms/step - loss: 0.4778 - accuracy: 0.8922 - val_loss: 0.0998 - val_accuracy: 0.9693\n",
-      "Epoch 2/25\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.1189 - accuracy: 0.9672 - val_loss: 0.0574 - val_accuracy: 0.9829\n",
-      "Epoch 3/25\n",
-      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0888 - accuracy: 0.9747 - val_loss: 0.0697 - val_accuracy: 0.9767\n",
-      "Epoch 4/25\n",
-      " 791/1182 [===================>..........] - ETA: 2s - loss: 0.0738 - accuracy: 0.9779"
+      "Epoch 1/50\n",
+      "1182/1182 [==============================] - 20s 8ms/step - loss: 0.4404 - accuracy: 0.8909 - val_loss: 0.1105 - val_accuracy: 0.9681\n",
+      "Epoch 2/50\n",
+      "1182/1182 [==============================] - 8s 7ms/step - loss: 0.1201 - accuracy: 0.9653 - val_loss: 0.0619 - val_accuracy: 0.9824\n",
+      "Epoch 3/50\n",
+      "1182/1182 [==============================] - 8s 7ms/step - loss: 0.0917 - accuracy: 0.9728 - val_loss: 0.0540 - val_accuracy: 0.9845\n",
+      "Epoch 4/50\n",
+      "1182/1182 [==============================] - 8s 7ms/step - loss: 0.0741 - accuracy: 0.9790 - val_loss: 0.0531 - val_accuracy: 0.9833\n",
+      "Epoch 5/50\n",
+      "1182/1182 [==============================] - 8s 7ms/step - loss: 0.0610 - accuracy: 0.9824 - val_loss: 0.0504 - val_accuracy: 0.9869\n",
+      "Epoch 6/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0598 - accuracy: 0.9835 - val_loss: 0.0549 - val_accuracy: 0.9843\n",
+      "Epoch 7/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0543 - accuracy: 0.9843 - val_loss: 0.0543 - val_accuracy: 0.9857\n",
+      "Epoch 8/50\n",
+      "1182/1182 [==============================] - 8s 7ms/step - loss: 0.0499 - accuracy: 0.9852 - val_loss: 0.0511 - val_accuracy: 0.9843\n",
+      "Epoch 9/50\n",
+      "1182/1182 [==============================] - 8s 6ms/step - loss: 0.0477 - accuracy: 0.9864 - val_loss: 0.0564 - val_accuracy: 0.9843\n",
+      "Epoch 10/50\n",
+      "1182/1182 [==============================] - 8s 6ms/step - loss: 0.0416 - accuracy: 0.9885 - val_loss: 0.0635 - val_accuracy: 0.9848\n",
+      "Epoch 11/50\n",
+      "1182/1182 [==============================] - 8s 7ms/step - loss: 0.0406 - accuracy: 0.9887 - val_loss: 0.0710 - val_accuracy: 0.9810\n",
+      "Epoch 12/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0339 - accuracy: 0.9903 - val_loss: 0.0977 - val_accuracy: 0.9810\n",
+      "Epoch 13/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0362 - accuracy: 0.9897 - val_loss: 0.0680 - val_accuracy: 0.9864\n",
+      "Epoch 14/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0364 - accuracy: 0.9902 - val_loss: 0.0625 - val_accuracy: 0.9883\n",
+      "Epoch 15/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0331 - accuracy: 0.9908 - val_loss: 0.0562 - val_accuracy: 0.9876\n",
+      "Epoch 16/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0328 - accuracy: 0.9907 - val_loss: 0.1059 - val_accuracy: 0.9810\n",
+      "Epoch 17/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0288 - accuracy: 0.9925 - val_loss: 0.0808 - val_accuracy: 0.9852\n",
+      "Epoch 18/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0294 - accuracy: 0.9924 - val_loss: 0.0639 - val_accuracy: 0.9886\n",
+      "Epoch 19/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0311 - accuracy: 0.9920 - val_loss: 0.0975 - val_accuracy: 0.9845\n",
+      "Epoch 20/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0311 - accuracy: 0.9922 - val_loss: 0.1008 - val_accuracy: 0.9848\n",
+      "Epoch 21/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0315 - accuracy: 0.9919 - val_loss: 0.0876 - val_accuracy: 0.9893\n",
+      "Epoch 22/50\n",
+      "1182/1182 [==============================] - 8s 7ms/step - loss: 0.0293 - accuracy: 0.9929 - val_loss: 0.0990 - val_accuracy: 0.9850\n",
+      "Epoch 23/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0288 - accuracy: 0.9934 - val_loss: 0.0773 - val_accuracy: 0.9881\n",
+      "Epoch 24/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0298 - accuracy: 0.9927 - val_loss: 0.0626 - val_accuracy: 0.9867\n",
+      "Epoch 25/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0289 - accuracy: 0.9935 - val_loss: 0.1545 - val_accuracy: 0.9800\n",
+      "Epoch 26/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0270 - accuracy: 0.9932 - val_loss: 0.0948 - val_accuracy: 0.9874\n",
+      "Epoch 27/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0308 - accuracy: 0.9925 - val_loss: 0.0935 - val_accuracy: 0.9869\n",
+      "Epoch 28/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0264 - accuracy: 0.9935 - val_loss: 0.1074 - val_accuracy: 0.9879\n",
+      "Epoch 29/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0323 - accuracy: 0.9930 - val_loss: 0.0913 - val_accuracy: 0.9852\n",
+      "Epoch 30/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0271 - accuracy: 0.9935 - val_loss: 0.0987 - val_accuracy: 0.9852\n",
+      "Epoch 31/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0227 - accuracy: 0.9946 - val_loss: 0.0928 - val_accuracy: 0.9871\n",
+      "Epoch 32/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0264 - accuracy: 0.9937 - val_loss: 0.1232 - val_accuracy: 0.9876\n",
+      "Epoch 33/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0370 - accuracy: 0.9927 - val_loss: 0.1089 - val_accuracy: 0.9860\n",
+      "Epoch 34/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0246 - accuracy: 0.9944 - val_loss: 0.0988 - val_accuracy: 0.9860\n",
+      "Epoch 35/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0261 - accuracy: 0.9940 - val_loss: 0.1101 - val_accuracy: 0.9848\n",
+      "Epoch 36/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0296 - accuracy: 0.9939 - val_loss: 0.0965 - val_accuracy: 0.9881\n",
+      "Epoch 37/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0309 - accuracy: 0.9936 - val_loss: 0.1267 - val_accuracy: 0.9860\n",
+      "Epoch 38/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0295 - accuracy: 0.9936 - val_loss: 0.0996 - val_accuracy: 0.9869\n",
+      "Epoch 39/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0254 - accuracy: 0.9942 - val_loss: 0.1382 - val_accuracy: 0.9876\n",
+      "Epoch 40/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0358 - accuracy: 0.9934 - val_loss: 0.0996 - val_accuracy: 0.9879\n",
+      "Epoch 41/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0304 - accuracy: 0.9938 - val_loss: 0.1291 - val_accuracy: 0.9855\n",
+      "Epoch 42/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0273 - accuracy: 0.9940 - val_loss: 0.1193 - val_accuracy: 0.9867\n",
+      "Epoch 43/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0293 - accuracy: 0.9946 - val_loss: 0.1390 - val_accuracy: 0.9867\n",
+      "Epoch 44/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0384 - accuracy: 0.9936 - val_loss: 0.1582 - val_accuracy: 0.9855\n",
+      "Epoch 45/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0254 - accuracy: 0.9944 - val_loss: 0.1483 - val_accuracy: 0.9838\n",
+      "Epoch 46/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0339 - accuracy: 0.9938 - val_loss: 0.2155 - val_accuracy: 0.9845\n",
+      "Epoch 47/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0281 - accuracy: 0.9952 - val_loss: 0.1368 - val_accuracy: 0.9850\n",
+      "Epoch 48/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0333 - accuracy: 0.9941 - val_loss: 0.2126 - val_accuracy: 0.9857\n",
+      "Epoch 49/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0294 - accuracy: 0.9947 - val_loss: 0.1839 - val_accuracy: 0.9864\n",
+      "Epoch 50/50\n",
+      "1182/1182 [==============================] - 7s 6ms/step - loss: 0.0421 - accuracy: 0.9936 - val_loss: 0.1385 - val_accuracy: 0.9890\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1de57f62770>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "model.fit(X_train, y_train,\n",
     "          validation_data=(X_val, y_val),\n",
-    "          epochs=25)"
+    "          epochs=50)"
    ]
   },
   {
@@ -817,14 +919,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "132/132 [==============================] - 0s 3ms/step - loss: 0.1061 - accuracy: 0.9833\n"
+      "132/132 [==============================] - 0s 4ms/step - loss: 0.1385 - accuracy: 0.9890\n"
      ]
     }
    ],
@@ -834,14 +936,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy: 98.333335%\n"
+      "accuracy: 98.904765%\n"
      ]
     }
    ],
@@ -854,7 +956,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4) Making Predictions on Test"
+    "## 5) Saving the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the model\n",
+    "import time\n",
+    "model.save(f\"Digit_Recognizer{time.time()}.h5\")"
    ]
   },
   {
