--- a/Kaggle Practice/12_Sentiment_Analysis/Sentiment_Analysis.ipynb
+++ b/Kaggle Practice/12_Sentiment_Analysis/Sentiment_Analysis.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "array(['cab', 'call', 'me', 'please', 'tonight', 'you'], dtype=object)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "\twith 9 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "       [0, 1, 1, 2, 0, 0]], dtype=int64)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "2    0     1   1       2        0    0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
        "array([[0, 1, 1, 1, 0, 0]], dtype=int64)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "0    0     1   1       1        0    0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
        "4                        Sons of ****,  negative  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
        "4   Sons of ****, why couldn`t they put them on t...  negative"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
        "freq                                       1     11117"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
        "positive     1  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
        "4   Sons of ****, why couldn`t they put them on t...  negative              2"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,7 @@
        "4              75  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +980,7 @@
        "Text(0.5, 0, 'Message Length')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1016,12 +1016,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\Admin\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers\\punkt.zip.\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\Admin\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "import string\n",
+    "import nltk\n",
     "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "nltk.download('punkt')\n",
+    "nltk.download('stopwords')\n",
     "\n",
     "\n",
     "def text_process(message):\n",
@@ -1029,26 +1046,31 @@
     "    Takes in a string of text, then performs the following:\n",
     "    1. Remove all punctuation\n",
     "    2. Remove all stopwords\n",
-    "    3. Returns a list of the cleaned text\n",
-    "    4. Convert all text to lowercase\n",
+    "    3. Convert all text to lowercase\n",
+    "    4. Returns a list of the cleaned text\n",
+    "    5. Remove short words (e.g., words with 2 or fewer characters)\n",
+    "    6. Returns a list of the cleaned text\n",
     "    \"\"\"\n",
     "\n",
-    "    STOPWORDS = stopwords.words(\n",
-    "        'english') + ['u', 'ü', 'ur', '4', '2', 'im', 'dont', 'doin', 'ure']\n",
+    "    STOPWORDS = set(stopwords.words('english')).union(\n",
+    "        ['u', 'ü', 'ur', '4', '2', 'im', 'dont', 'doin', 'ure'])\n",
+    "\n",
+    "    # Tokenize the text\n",
+    "    words = word_tokenize(message)\n",
     "\n",
     "    # Check characters to see if they are in punctuation\n",
-    "    nopunc = [char for char in message if char not in string.punctuation]\n",
+    "    nopunc = [word for word in words if word not in string.punctuation]\n",
     "\n",
-    "    # Join the characters again to form the string.\n",
-    "    nopunc = ''.join(nopunc)\n",
+    "    # Convert the text to lowercase and remove short words\n",
+    "    cleaned_words = [word.lower() for word in nopunc if len(word) > 2]\n",
     "\n",
     "    # Now just remove any stopwords\n",
-    "    return ' '.join([word for word in nopunc.split() if word.lower() not in STOPWORDS])"
+    "    return ' '.join([word for word in cleaned_words if word not in STOPWORDS])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1156,7 @@
        "4              75  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1145,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1183,7 +1205,7 @@
        "      <td>neutral</td>\n",
        "      <td>1</td>\n",
        "      <td>36</td>\n",
-       "      <td>Id responded going</td>\n",
+       "      <td>responded going</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1191,7 +1213,7 @@
        "      <td>negative</td>\n",
        "      <td>2</td>\n",
        "      <td>46</td>\n",
-       "      <td>Sooo SAD miss San Diego</td>\n",
+       "      <td>sooo sad miss san diego</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1199,7 +1221,7 @@
        "      <td>negative</td>\n",
        "      <td>2</td>\n",
        "      <td>25</td>\n",
-       "      <td>boss bullying</td>\n",
+       "      <td>boss bullying ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1215,7 +1237,7 @@
        "      <td>negative</td>\n",
        "      <td>2</td>\n",
        "      <td>75</td>\n",
-       "      <td>Sons couldnt put releases already bought</td>\n",
+       "      <td>sons put releases already bought</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1229,15 +1251,15 @@
        "3                     what interview! leave me alone  negative              2   \n",
        "4   Sons of ****, why couldn`t they put them on t...  negative              2   \n",
        "\n",
-       "   message_length                                clean_text  \n",
-       "0              36                        Id responded going  \n",
-       "1              46                   Sooo SAD miss San Diego  \n",
-       "2              25                             boss bullying  \n",
-       "3              31                     interview leave alone  \n",
-       "4              75  Sons couldnt put releases already bought  "
+       "   message_length                        clean_text  \n",
+       "0              36                   responded going  \n",
+       "1              46           sooo sad miss san diego  \n",
+       "2              25                 boss bullying ...  \n",
+       "3              31             interview leave alone  \n",
+       "4              75  sons put releases already bought  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1256,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1290,15 +1312,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'scipy.sparse._csr.csr_matrix'> (21984, 25079)\n",
-      "<class 'scipy.sparse._csr.csr_matrix'> (5496, 25079)\n"
+      "<class 'scipy.sparse._csr.csr_matrix'> (21984, 22575)\n",
+      "<class 'scipy.sparse._csr.csr_matrix'> (5496, 22575)\n"
      ]
     }
    ],
@@ -1325,17 +1347,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<21984x25079 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 151750 stored elements in Compressed Sparse Row format>"
+       "<21984x22575 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 147576 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1358,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1369,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1377,7 +1399,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 7 ms\n"
+      "Wall time: 6 ms\n"
      ]
     },
     {
@@ -1389,7 +1411,7 @@
        "MultinomialNB()"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1401,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1409,11 +1431,11 @@
      "output_type": "stream",
      "text": [
       "===== Accuracy =====\n",
-      "0.6491994177583698\n",
+      "0.6553857350800583\n",
       "===== Confusion Matrix =====\n",
-      "[[1182  475   77]\n",
-      " [ 361 1528  312]\n",
-      " [ 125  578  858]]\n"
+      "[[1185  470   79]\n",
+      " [ 343 1539  319]\n",
+      " [ 126  557  878]]\n"
      ]
     }
    ],
@@ -1441,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1449,11 +1471,11 @@
      "output_type": "stream",
      "text": [
       "===== Accuracy =====\n",
-      "0.61863173216885\n",
+      "0.6266375545851528\n",
       "===== Confusion Matrix =====\n",
-      "[[ 990  707   37]\n",
-      " [ 222 1828  151]\n",
-      " [  71  908  582]]\n"
+      "[[1011  684   39]\n",
+      " [ 222 1812  167]\n",
+      " [  73  867  621]]\n"
      ]
     }
    ],
